[tool.poetry]
name = "replaybuffer"
version = "0.1.0"
description = ""
authors = ["Artem <a4b11s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
h5py = "^3.12.1"
torch = "^2.4.1"
filelock = "^3.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
